--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     </g>
   </a>
 </svg>
-
+<p class="click-2"> <i>'Click'</i></p>
     </div>
     <div class="col-sm about-me">
      <h4 class="mb-4 headline-b-border">What About you?</h4>
@@ -100,7 +100,7 @@
 <g>
 </g>
 </svg>
-
+<p class="click"> <i>'Click'</i></p>
     </div>
   </div> <!-- ---ABOUT ME ENDING TAG -->
 </div>
