--- a/index.html
+++ b/index.html
@@ -183,10 +183,10 @@
 
 
 <!-- Footer -->
-<footer class="page-footer my-5 footer">
+<footer class="page-footer mt-5 footer">
 
   <!-- Copyright -->
-  <div class="footer-copyright text-center py-3">© Thank you for looking at my website! 
+  <div class="text-center py-3">Big thank you!
   </div>
   <!-- Copyright -->
 
