--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 <head>
   <title>George Flood</title>
+  <link rel="shortcut icon" type="image/png" href="favicon.png">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
   <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -36,7 +37,7 @@
   <p class='fade-p'>I spend so much time here, why not make it <span class="pretty">prettier</span>.</p>
 </div>
 
-<div class="text-center">
+<div class="text-center overflow-hidden">
   <div class="row">
     <div class="col-sm about-me">
      <h4 class="mb-4 headline-b-border"> Abit about me</h4>
