--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
   <link rel="shortcut icon" type="image/png" href="favicon.png">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
-  <link rel="preconnect" href="https://fonts.gstatic.com">
-<link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@1,300&display=swap" rel="stylesheet">
-  <link rel='stylesheet' href='css/styles.css'>
+<link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Cairo:wght@300&display=swap" rel="stylesheet">
+<link rel='stylesheet' href='css/styles.css'>
 </head>
 
 <body>
@@ -105,6 +105,7 @@
 </div>
 
  <h2 class="my-3 text-center m-auto"> Look out below, it's my portfolio!</h2>
+  <h3 class="text-center">&lt;h3&gt;Hello world&lt;/h3&gt;</h3>
 <div class=" container m-auto row d-flex align-items-center justify-content-around portfolio">
   
   <div class="card my-3" style="width: 21rem;">
