--- a/index.html
+++ b/index.html
@@ -112,11 +112,16 @@
   <img class="card-img-top" src="videos/project-8.gif" alt="Project 8 GIF">
   <div class="card-body">
     <h5 class="card-title">AJAX</h5>
-    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+    <p class="card-text">Employee Directory communicating with a fictional employee API fetching requests - clicking a profile activates a modal!</p>
+    <div class="text-center">
     <img src='images/html5.png' alt='html 5 logo' height='50'width='50'>
         <img src='images/css.png' alt='html 5 logo' height='50'width='50'>
-                <img src='images/js.png' alt='html 5 logo' height='50'width='60'>
+                <img src='images/js.png' alt='html 5 logo' height='50'width='50'>
+              </div> <!-- CLOSING IMG.PNG DIV -->
+                <div class="buttons">
     <a target="_blank" href="https://github.com/GeorgeFlood/project-8" class="btn btn-primary">GitHub</a>
+     <a target="_blank" href="https://github.com/GeorgeFlood/project-3" class="btn btn-primary">Live</a>
+   </div> <!-- CLOSING BUTTONS/LINK DIV -->
   </div>
 </div>
 
@@ -125,11 +130,16 @@
   <img class="card-img-top" src="videos/project-7.gif" alt="Project 7 GIF">
   <div class="card-body">
     <h5 class="card-title">Dashboard</h5>
-    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+    <p class="card-text">User friendly dashboard built up with HTML & CSS, charts & graphs from an open-source JS Libary.</p>
+    <div class="text-center">
     <img src='images/html5.png' alt='html 5 logo' height='50'width='50'>
             <img src='images/css.png' alt='html 5 logo' height='50'width='50'>
-                            <img src='images/js.png' alt='html 5 logo' height='50'width='60'>
+                            <img src='images/js.png' alt='html 5 logo' height='50'width='50'>
+                          </div> <!-- CLOSING IMG.PNG DIV -->
+                          <div class="buttons">
     <a target="_blank" href="https://github.com/GeorgeFlood/project-7" class="btn btn-primary">GitHub</a>
+     <a target="_blank" href="https://github.com/GeorgeFlood/project-3" class="btn btn-primary">Live</a>
+   </div> <!-- CLOSING BUTTON/LINK DIV -->
   </div>
 </div>
 
@@ -138,10 +148,15 @@
   <img class="card-img-top" src="videos/project-6.gif" alt="Project 6 GIF">
   <div class="card-body">
     <h5 class="card-title">Js mini-game</h5>
-    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+    <p class="card-text">Javascript Mini-game. A random phrase is generated from an array & user guesses the characters. Desktop screens only.</p>
+    <div class="text-center">
             <img src='images/css.png' alt='html 5 logo' height='50'width='50'>
-                <img src='images/js.png' alt='html 5 logo' height='50'width='60'>
+                <img src='images/js.png' alt='html 5 logo' height='50'width='50'>
+              </div> <!-- CLOSING IMG.PNG DIV -->
+                <div class="buttons">
     <a target="_blank" href="https://github.com/GeorgeFlood/project-6" class="btn btn-primary">GitHub</a>
+     <a target="_blank" href="https://github.com/GeorgeFlood/project-3" class="btn btn-primary">Live</a>
+   </div> <!-- CLOSING BUTTON/LINK DIV -->
   </div>
 </div>
 
@@ -149,11 +164,16 @@
 <div class="card my-3" style="width: 21rem;">
   <img class="card-img-top" src="videos/project-5.gif" alt="Project 5 GIF">
   <div class="card-body">
-    <h5 class="card-title">Instagram GRID layout</h5>
-    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+    <h5 class="card-title">Gallery</h5>
+    <p class="card-text">A grid-layout instagram'esk' for the pictures, using a jQuery plugin to filter through each picture.</p>
+    <div class="text-center">
     <img src='images/html5.png' alt='html 5 logo' height='50'width='50'>
     <img src='images/css.png' alt='html 5 logo' height='50'width='50'>
+  </div> <!-- closing img.png div -->
+    <div class="buttons">
     <a target="_blank" href="https://github.com/GeorgeFlood/Project-5" class="btn btn-primary">GitHub</a>
+     <a target="_blank" href="https://github.com/GeorgeFlood/project-3" class="btn btn-primary">Live</a>
+   </div> <!-- closing btn/link tag -->
   </div>
 </div>
 
@@ -161,10 +181,15 @@
   <img class="card-img-top" src="videos/project-4.gif" alt="Project 4 GIF">
   <div class="card-body">
     <h5 class="card-title">SCSS</h5>
-    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+    <p class="card-text">A sample website, re-formatted CSS code into SCSS partials for cleaner, less repetative code.</p>
+    <div class="text-center">
     <img src='images/html5.png' alt='html 5 logo' height='50'width='50'>
     <img src='images/css.png' alt='html 5 logo' height='50'width='50'>
+  </div> <!-- CLOSING IMG.PGN DIV -->
+    <div class="buttons">
     <a target="_blank" href="https://github.com/GeorgeFlood/project-4" class="btn btn-primary">GitHub</a>
+     <a target="_blank" href="https://github.com/GeorgeFlood/project-3" class="btn btn-primary">Live</a>
+   </div> <!-- CLOSING BTN/LINK DIV -->
   </div>
 </div>
 
@@ -172,10 +197,15 @@
   <img class="card-img-top" src="videos/project-3.gif" alt="Project 3 GIF">
   <div class="card-body">
     <h5 class="card-title">HTML & CSS Sign-up form</h5>
-    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+    <p class="card-text">A user-friendly, responsive registeration-form built up from HTML & CSS for a aesthetically pleasing experience.</p>
+    <div class='text-center'>
     <img src='images/html5.png' alt='html 5 logo' height='50'width='50'>
     <img src='images/css.png' alt='html 5 logo' height='50'width='50'>
+  </div> <!-- -- closing img.png div -->
+    <div class="buttons">
     <a target="_blank" href="https://github.com/GeorgeFlood/project-3" class="btn btn-primary">GitHub</a>
+    <a target="_blank" href="https://github.com/GeorgeFlood/project-3" class="btn btn-primary">Live</a>
+  </div> <!-- -- closing btn/link div -- -->
   </div>
 </div>
 
