--- a/index.html
+++ b/index.html
@@ -11,21 +11,21 @@
 <link rel='stylesheet' href='css/styles.css'>
 </head>
 
-<body>
+<body id="home" data-spy="scroll" data-target=".nav-bar" data-offset="100">
 
-<nav class="fixed-top">
+<nav class="nav-bar fixed-top">
   <ul class="nav nav-tabs">
     <li class="nav-item">
-      <a class="nav-link active" aria-current="page" href="#">Home</a>
+      <a class="nav-link active" aria-current="page" href="#home">Home</a>
     </li>
     <li class="nav-item">
-      <a class="nav-link" href="#">About</a>
+      <a class="nav-link" href="#about">About</a>
     </li>
     <li class="nav-item">
-      <a class="nav-link" href="#">Portfolio</a>
+      <a class="nav-link" href="#portfolio">Portfolio</a>
     </li>
     <li class="nav-item">
-      <a class="nav-link" href="#">George Flood</a>
+      <a class="nav-link" target="_blank" href="https://www.linkedin.com/in/george-flood/">George Flood</a>
     </li>
   </ul>
 </nav>
@@ -37,10 +37,10 @@
   <p class='fade-p'>I spend so much time here, why not make it <span class="pretty">prettier</span>.</p>
 </div>
 
-<div class="text-center overflow-hidden">
+<div class="text-center overflow-hidden" id="about">
   <div class="row">
     <div class="col-sm about-me">
-     <h4 class="mb-4 headline-b-border"> Abit about me</h4>
+     <h4 class="mb-4 headline-b-border"> A bit about me</h4>
      <p> From the start of 2020 I started to learn code. I learnt the basic's of Python, enjoyed it and looked into where I'd like to start a journey. I signed up with TeamTreeHouse's techdegree and completed the front end course, building 9 projects. the journey has only just started and I'm exicited with the potential of code.</p> 
 <a target="_blank" href="https://teamtreehouse.com/techdegree">
      <?xml version="1.0" encoding="UTF-8" standalone="no"?>
@@ -103,9 +103,10 @@
     </div>
   </div> <!-- ---ABOUT ME ENDING TAG -->
 </div>
-
- <h2 class="my-3 text-center m-auto"> Look out below, it's my portfolio!</h2>
+<div class="portfolio-intro">
+ <h2 id="portfolio" class="my-3 text-center m-auto"> Look out below, it's my portfolio!</h2>
   <h3 class="text-center">&lt;h3&gt;Hello world&lt;/h3&gt;</h3>
+</div>
 <div class=" container m-auto row d-flex align-items-center justify-content-around portfolio">
   
   <div class="card my-3" style="width: 21rem;">
