--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 
 <body id="home" data-spy="scroll" data-target=".nav-bar" data-offset="100">
 
+
 <nav class="nav-bar fixed-top">
   <ul class="nav nav-tabs">
     <li class="nav-item">
@@ -35,13 +36,17 @@
   <p class="lead fade">Web-Developer</p>
   <hr class="my-4">
   <p class='fade-p'>I spend so much time here, why not make it <span class="pretty">prettier</span>.</p>
+  <div class="d1"></div>
+  <div class="d2"></div>
+  <div class="d3"></div>
+  <div class="d4"></div>
 </div>
 
 <div class="text-center overflow-hidden" id="about">
   <div class="row">
     <div class="col-sm about-me">
      <h4 class="mb-4 headline-b-border"> A bit about me</h4>
-     <p> From the start of 2020 I started to learn code. I learnt the basic's of Python, enjoyed it and looked into where I'd like to start a journey. I signed up with TeamTreeHouse's techdegree and completed the front end course, building 9 projects. the journey has only just started and I'm exicited with the potential of code.</p> 
+     <p>From the beginning of 2020 I began to learn the basics of Python. I found it satisfying and found the potential exiciting - From here I started to look into where I could begin a path, I found TeamTreeHouse's Techdegree program and it connected with me immediately, putting brackets with words in a text editor could create things! I specifically remember sitting there for 10 minutes clicking an input button I'd just made feeling like I'd unlocked a super-power. There is no doubt in my mind this is a career I want to persue, which is extremely exiciting for me, I've still got alot to learn & I'm learning alot. </p> 
 <a target="_blank" href="https://teamtreehouse.com/techdegree">
      <?xml version="1.0" encoding="UTF-8" standalone="no"?>
 <svg  width="256px" height="274px" viewBox="0 0 256 274" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" preserveAspectRatio="xMidYMid">
@@ -56,7 +61,7 @@
     </div>
     <div class="col-sm about-me">
      <h4 class="mb-4 headline-b-border">What About you?</h4>
-     <p> If you're interested in getting in contact for a potential Junior role position OR you'd like me to build you a website which currently I'll do free of charge just for experience, please don't hestiate to contact me! start a conversation below, partner!</p>
+     <p>If you like my work so far and would like to get in-contact for a comission website, let's have a chat! I'm not currently in this for money so the experience is more valuable to me right now. I'm also now Looking out for a Junior Web-developer role! I'd be great to work somewhere that'll progress my skills further with clear future prospects. If you're hiring or know of anyone hiring, please get intouch! Thank you.</p>
 
 <a href="mailto:mrgeorgeflood@gmail.com?subject=From the website">
 <?xml version="1.0" encoding="iso-8859-1"?>
@@ -103,11 +108,15 @@
     </div>
   </div> <!-- ---ABOUT ME ENDING TAG -->
 </div>
+
+
 <div class="portfolio-intro">
- <h2 id="portfolio" class="my-3 text-center m-auto"> Look out below, it's my portfolio!</h2>
-  <h3 class="text-center">&lt;h3&gt;Hello world&lt;/h3&gt;</h3>
+ <h2 id="portfolio" class="my-3 text-center m-auto"> Look out below, it's my <span class="introspan">portfolio!<span></h2>
+  <h3 class="text-center bracket">&lt;h3&gt;<span class='helloworld'>Hello world</span>&lt;/h3&gt;</h3>
 </div>
-<div class=" container m-auto row d-flex align-items-center justify-content-around portfolio">
+
+
+<div class="container m-auto row d-flex align-items-center justify-content-around portfolio">
   
   <div class="card my-3" style="width: 21rem;">
   <img class="card-img-top" src="videos/project-8.gif" alt="Project 8 GIF">
@@ -226,7 +235,7 @@
 </footer>
 <!-- Footer -->
 
-
+<script src="js/app.js"></script>
 </body>
 
 </html>
