--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
 
 
 <div class="portfolio-intro">
- <h2 id="portfolio" class="my-3 text-center m-auto"> Look out below, it's my <span class="introspan">portfolio!<span></h2>
+ <h2 id="portfolio" class="my-3 text-center m-auto"> Look out below, it's my <span class="introspan"><strong>portfolio!</strong><span></h2>
   <h3 class="text-center bracket">&lt;h3&gt;<span class='helloworld'>Hello world</span>&lt;/h3&gt;</h3>
 </div>
 
