--- a/index.html
+++ b/index.html
@@ -103,7 +103,6 @@
   </g>
   <g>
   </g>
-  </svg>
       <p class="click"> <i>'Click'</i></p>
     </div>
   </div> <!-- ---ABOUT ME ENDING TAG -->
@@ -111,7 +110,7 @@
 
 
 <div class="portfolio-intro">
-   <h2 id="portfolio" class="my-3 text-center m-auto"> Look out below, it's my <span class="introspan">portfolio!<span></h2>
+   <h2 id="portfolio" class="my-3 text-center m-auto"> Look out below, it's my <span class="introspan">portfolio!</span></h2>
     <h3 class="text-center bracket">&lt;h3&gt;<span class='helloworld'>Hello world</span>&lt;/h3&gt;</h3>
 </div>
 
@@ -124,9 +123,9 @@
         <h5 class="card-title">AJAX</h5>
         <p class="card-text">Employee Directory communicating with a fictional employee API fetching requests - clicking a profile activates a modal!</p>
         <div class="text-center">
-        <img src='images/html5.png' alt='html 5 logo' height='50'width='50'>
-            <img src='images/css.png' alt='html 5 logo' height='50'width='50'>
-                    <img src='images/js.png' alt='html 5 logo' height='50'width='50'>
+        <img src='images/html5.png' alt='html 5 logo' height='50' width='50'>
+            <img src='images/css.png' alt='html 5 logo' height='50' width='50'>
+                    <img src='images/js.png' alt='html 5 logo' height='50' width='50'>
                   </div> <!-- CLOSING IMG.PNG DIV -->
                     <div class="buttons">
         <a target="_blank" href="https://github.com/GeorgeFlood/project-8" class="btn btn-primary">GitHub</a>
@@ -142,9 +141,9 @@
         <h5 class="card-title">Dashboard</h5>
         <p class="card-text">User friendly dashboard built up with HTML & CSS, charts & graphs from an open-source JS Libary.</p>
         <div class="text-center">
-        <img src='images/html5.png' alt='html 5 logo' height='50'width='50'>
-                <img src='images/css.png' alt='html 5 logo' height='50'width='50'>
-                                <img src='images/js.png' alt='html 5 logo' height='50'width='50'>
+        <img src='images/html5.png' alt='html 5 logo' height='50' width='50'>
+                <img src='images/css.png' alt='html 5 logo' height='50' width='50'>
+                                <img src='images/js.png' alt='html 5 logo' height='50' width='50'>
                               </div> <!-- CLOSING IMG.PNG DIV -->
                               <div class="buttons">
         <a target="_blank" href="https://github.com/GeorgeFlood/project-7" class="btn btn-primary">GitHub</a>
@@ -160,8 +159,8 @@
         <h5 class="card-title">Js mini-game</h5>
         <p class="card-text">Javascript Mini-game. A random phrase is generated from an array & user guesses the characters. Desktop screens only.</p>
         <div class="text-center">
-                <img src='images/css.png' alt='html 5 logo' height='50'width='50'>
-                    <img src='images/js.png' alt='html 5 logo' height='50'width='50'>
+                <img src='images/css.png' alt='html 5 logo' height='50' width='50'>
+                    <img src='images/js.png' alt='html 5 logo' height='50' width='50'>
                   </div> <!-- CLOSING IMG.PNG DIV -->
                     <div class="buttons">
         <a target="_blank" href="https://github.com/GeorgeFlood/project-6" class="btn btn-primary">GitHub</a>
@@ -177,8 +176,8 @@
         <h5 class="card-title">Gallery</h5>
         <p class="card-text">A grid-layout instagram'esk' for the pictures, using a jQuery plugin to filter through each picture.</p>
         <div class="text-center">
-        <img src='images/html5.png' alt='html 5 logo' height='50'width='50'>
-        <img src='images/css.png' alt='html 5 logo' height='50'width='50'>
+        <img src='images/html5.png' alt='html 5 logo' height='50' width='50'>
+        <img src='images/css.png' alt='html 5 logo' height='50' width='50'>
       </div> <!-- closing img.png div -->
         <div class="buttons">
         <a target="_blank" href="https://github.com/GeorgeFlood/Project-5" class="btn btn-primary">GitHub</a>
@@ -193,8 +192,8 @@
         <h5 class="card-title">SCSS</h5>
         <p class="card-text">A sample website, re-formatted CSS code into SCSS partials for cleaner, less repetative code.</p>
         <div class="text-center">
-        <img src='images/html5.png' alt='html 5 logo' height='50'width='50'>
-        <img src='images/css.png' alt='html 5 logo' height='50'width='50'>
+        <img src='images/html5.png' alt='html 5 logo' height='50' width='50'>
+        <img src='images/css.png' alt='html 5 logo' height='50' width='50'>
       </div> <!-- CLOSING IMG.PGN DIV -->
         <div class="buttons">
         <a target="_blank" href="https://github.com/GeorgeFlood/project-4" class="btn btn-primary">GitHub</a>
@@ -209,8 +208,8 @@
         <h5 class="card-title">HTML & CSS Sign-up form</h5>
         <p class="card-text">A user-friendly, responsive registeration-form built up from HTML & CSS for a aesthetically pleasing experience.</p>
         <div class='text-center'>
-        <img src='images/html5.png' alt='html 5 logo' height='50'width='50'>
-        <img src='images/css.png' alt='html 5 logo' height='50'width='50'>
+        <img src='images/html5.png' alt='html 5 logo' height='50' width='50'>
+        <img src='images/css.png' alt='html 5 logo' height='50' width='50'>
       </div> <!-- -- closing img.png div -->
         <div class="buttons">
         <a target="_blank" href="https://github.com/GeorgeFlood/project-3" class="btn btn-primary">GitHub</a>
