--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <a class="nav-link" href="#portfolio">Portfolio</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" target="_blank" href="https://www.linkedin.com/in/george-flood/">George Flood</a>
+        <a class="nav-link nav-name" target="_blank" href="https://www.linkedin.com/in/george-flood/">George Flood</a>
       </li>
   </ul>
 </nav>
