--- a/index.html
+++ b/index.html
@@ -221,18 +221,47 @@
 </div>
 
 
+<footer class="bg-primary text-white text-center text-lg-start">
+  <!-- Grid container -->
+  <div class="container p-4">
+    <!--Grid row-->
+    <div class="row">
+      <!--Grid column-->
+      <div class="col-lg-6 col-md-12 mb-4 mb-md-0">
+        <h5 class="text-uppercase">Thank you!</h5>
 
+        <p>
+          This is my first attempt at a real professional looking website.. and I'm a proud nerd, honestly! Once again, if you want to get in-contact with me please don't hesitate, as long as I'm not asleep I should respond within an hour! Thank you, stay safe.
+        </p>
+      </div>
+      <!--Grid column-->
 
-<!-- Footer -->
-<footer class="page-footer mt-5 footer">
+      <!--Grid column-->
+      <div class="col-lg-3  mt-3  footer-links">
+        <h5 class="text-uppercase mb-0">Social's & Links</h5>
+
+        <ul class="list-unstyled">
+          <li>
+            <a target="_blank" href="https://github.com/GeorgeFlood" class="text-white"><img class="footer-img" src="svg-icons/github.png" height="50" width="50"></a>
+          </li>
+          <li>
+            <a target="_blank" href="https://www.linkedin.com/in/george-flood/" class="text-white"><img class="footer-img linkedin" src="svg-icons/linkedin.png" height="50" width="50"></a>
+          </li>
+        </ul>
+      </div>
+      <!--Grid column-->
+    </div>
+    <!--Grid row-->
+  </div>
+  <!-- Grid container -->
 
   <!-- Copyright -->
-  <div class="text-center py-3">Big thank you!
+  <div class="text-center p-1" style="background-color: rgba(0, 0, 0, 0.2)">
+    © 2021 Copyright:
+    <p class="text-white">George Flood</p>
   </div>
   <!-- Copyright -->
-
 </footer>
-<!-- Footer -->
 
 <script src="js/app.js"></script>
 </body>
