--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
                   </div> <!-- CLOSING IMG.PNG DIV -->
                     <div class="buttons">
         <a target="_blank" href="https://github.com/GeorgeFlood/project-8" class="btn btn-primary">GitHub</a>
-         <a target="_blank" href="https://github.com/GeorgeFlood/project-3" class="btn btn-primary">Live</a>
+         <a target="_blank" href="https://georgeflood.github.io/project-8/" class="btn btn-primary">Live</a>
        </div> <!-- CLOSING BUTTONS/LINK DIV -->
     </div>
 </div>
@@ -147,7 +147,7 @@
                               </div> <!-- CLOSING IMG.PNG DIV -->
                               <div class="buttons">
         <a target="_blank" href="https://github.com/GeorgeFlood/project-7" class="btn btn-primary">GitHub</a>
-         <a target="_blank" href="https://github.com/GeorgeFlood/project-3" class="btn btn-primary">Live</a>
+         <a target="_blank" href="https://georgeflood.github.io/project-7/" class="btn btn-primary">Live</a>
        </div> <!-- CLOSING BUTTON/LINK DIV -->
   </div>
 </div>
@@ -164,7 +164,7 @@
                   </div> <!-- CLOSING IMG.PNG DIV -->
                     <div class="buttons">
         <a target="_blank" href="https://github.com/GeorgeFlood/project-6" class="btn btn-primary">GitHub</a>
-         <a target="_blank" href="https://github.com/GeorgeFlood/project-3" class="btn btn-primary">Live</a>
+         <a target="_blank" href="https://georgeflood.github.io/project-6/" class="btn btn-primary">Live</a>
    </div> <!-- CLOSING BUTTON/LINK DIV -->
   </div>
 </div>
@@ -181,7 +181,7 @@
       </div> <!-- closing img.png div -->
         <div class="buttons">
         <a target="_blank" href="https://github.com/GeorgeFlood/Project-5" class="btn btn-primary">GitHub</a>
-         <a target="_blank" href="https://github.com/GeorgeFlood/project-3" class="btn btn-primary">Live</a>
+         <a target="_blank" href="https://georgeflood.github.io/Project-5/" class="btn btn-primary">Live</a>
    </div> <!-- closing btn/link tag -->
   </div>
 </div>
@@ -197,7 +197,7 @@
       </div> <!-- CLOSING IMG.PGN DIV -->
         <div class="buttons">
         <a target="_blank" href="https://github.com/GeorgeFlood/project-4" class="btn btn-primary">GitHub</a>
-         <a target="_blank" href="https://github.com/GeorgeFlood/project-3" class="btn btn-primary">Live</a>
+         <a target="_blank" href="https://georgeflood.github.io/project-4/" class="btn btn-primary">Live</a>
    </div> <!-- CLOSING BTN/LINK DIV -->
   </div>
 </div>
@@ -213,7 +213,7 @@
       </div> <!-- -- closing img.png div -->
         <div class="buttons">
         <a target="_blank" href="https://github.com/GeorgeFlood/project-3" class="btn btn-primary">GitHub</a>
-        <a target="_blank" href="https://github.com/GeorgeFlood/project-3" class="btn btn-primary">Live</a>
+        <a target="_blank" href="https://georgeflood.github.io/project3_re/" class="btn btn-primary">Live</a>
    </div> <!-- -- closing btn/link div -- -->
   </div>
  </div>
