title wide screen

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 <div class="jumbotron">
   <h1 class="display-4 fade">George Flood</h1>
   <p class="lead fade">Web-Developer</p>
-  <hr class="my-4">
+  <hr class="my-4 fade">
   <p class='fade-p'>I spend so much time here, why not make it <span class="pretty">prettier</span>.</p>
   <div class="d1"></div>
   <div class="d2"></div>
