--- a/index.html
+++ b/index.html
@@ -13,34 +13,30 @@
 
 <body id="home" data-spy="scroll" data-target=".nav-bar" data-offset="100">
 
+  <nav class="nav-bar fixed-top">
+    <ul class="nav nav-tabs">
+        <li class="nav-item">
+          <a class="nav-link active" aria-current="page" href="#home">Home</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#about">About</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#portfolio">Portfolio</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link nav-name" target="_blank" href="https://www.linkedin.com/in/george-flood/">George Flood</a>
+        </li>
+    </ul>
+  </nav>
 
-<nav class="nav-bar fixed-top">
-  <ul class="nav nav-tabs">
-      <li class="nav-item">
-        <a class="nav-link active" aria-current="page" href="#home">Home</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#about">About</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#portfolio">Portfolio</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link nav-name" target="_blank" href="https://www.linkedin.com/in/george-flood/">George Flood</a>
-      </li>
-  </ul>
-</nav>
+  <div class="jumbotron">
+    <h1 class="display-4 text">George Flood</h1>
+    <p class="lead fade text">Web-Developer</p>
+    <hr class="my-4 fade">
+    <p class='fade-p text'>I spend so much time here, why not make it prettier.</p>
+  </div>
 
-<div class="jumbotron">
-  <h1 class="display-4 fade">George Flood</h1>
-  <p class="lead fade">Web-Developer</p>
-  <hr class="my-4 fade">
-  <p class='fade-p'>I spend so much time here, why not make it <span class="pretty">prettier</span>.</p>
-  <div class="d1"></div>
-  <div class="d2"></div>
-  <div class="d3"></div>
-  <div class="d4"></div>
-</div>
 
 <div class="text-center overflow-hidden" id="about">
   <div class="row">
