--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
        <h4 class="mb-4 headline-b-border">What About you?</h4>
          <p>If you like my work so far and would like to get in-contact for a comission website, let's have a chat! I'm not currently in this for money so the experience is more valuable to me right now. I'm also now Looking out for a Junior Web-developer role! I'd be great to work somewhere that'll progress my skills further with clear future prospects. If you're hiring or know of anyone hiring, please get intouch! Thank you.</p>
 
-  <a href="mailto:mrgeorgeflood@gmail.com?subject=From the website">
+  <a href="mailto:mrgeorgeflood@gmail.com?subject=From&nbsp;the&nbsp;website">
   <?xml version="1.0" encoding="iso-8859-1"?>
   <!-- Generator: Adobe Illustrator 19.0.0, SVG Export Plug-In . SVG Version: 6.00 Build 0)  -->
   <svg class="mail-svg" version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
